# GenAI-lab

./: .env  .gitignore  README.md  requirement.txt
agent-lab/: main.py
agent-langraph-lab/: AgentState.py  main.py
agent-langraph/agent-lab/: Agent.py  main.py
agent-langraph/agent-search/: agent-search.py
agent-langraph/essay-writer/: AgentState.py  Queries.py  main.py
agent-langraph/human-in-the-loop/: Agent.py  main.py
agent-llamaindex/: router-engine.py  tool-calling.py
agent-rag/: document.ipynb
agent-rag-llamaindex/: multi-document-agent.py  reasoning-loop.py  tool-calling.py  utils.py
agent-rag-llamaindex/router-engine/: helper.py  main.py  utils.py
agent-with-langraph/agent-langraph-lab/: Agent.py
agent-with-langraph/human-in-the-loop/: AgentState.py
agent-with-langraph/persistence-and-streaming/: Agent.py  AgentState.py
knowledge-graphs/: query-with-cypher.py
mcp-poc/: pyproject.toml  server.py
persistence-and-streaming/: main.py
report-agent/: main.py  output.txt
report-agent-v2/: .env  agent.py  output.txt
report_agent_v3/: .env  agent.py  gitlab_crm_touchpoint.sql  output.txt  text.py
text-to-sql/: create_test_tables.sql  gemini_rag_sql.py
